--- a/2025/Spring/Numerical_Analysis/.vscode/settings.json
+++ b/2025/Spring/Numerical_Analysis/.vscode/settings.json
@@ -3,5 +3,6 @@
         "cmath": "cpp",
         "complex": "cpp",
         "iostream": "cpp"
-    }
+    },
+    "julia.environmentPath": "/home/lucas/Documents/School/2025"
 }
